compiler/typ/tests/fixtures/diagnostics/0781_polyvar_call_payload_mismatch_03.ml.infer.expected
File "0781_polyvar_call_payload_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0781_polyvar_call_payload_mismatch_03 is not a valid module name.

File "0781_polyvar_call_payload_mismatch_03.ml", line 4, characters 23-27:
4 | let _ = read_gamma (`A true)
                           ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
